--- a/Statistical_Machine_Learning/Projects/image classifier/model/Methods_Download_Images/bing_image_downloader.ipynb
+++ b/Statistical_Machine_Learning/Projects/image classifier/model/Methods_Download_Images/bing_image_downloader.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMYk7ku8sYIhyupPmxhDA9c",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Muhammad-Azham-Oman/AI_Portfolio/blob/main/bing_image_downloader.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting bing-image-downloader\n",
             "  Downloading bing_image_downloader-1.1.2-py3-none-any.whl.metadata (2.8 kB)\n",
@@ -55,10 +39,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from bing_image_downloader import downloader\n",
-        "downloader.download(\"dog\", limit=100)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,11 +47,10 @@
         "id": "Pm9W9Z7TWIrF",
         "outputId": "a889805b-565e-4027-e243-d9bc5c19fef7"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[%] Downloading Images to /content/dataset/dog\n",
             "\n",
@@ -1255,16 +1235,27 @@
             "[%] Done. Downloaded 100 images.\n"
           ]
         }
+      ],
+      "source": [
+        "from bing_image_downloader import downloader\n",
+        "downloader.download(\"dog\", limit=100)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yNXhXaZOWQDd"
-      },
-      "execution_count": null,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMYk7ku8sYIhyupPmxhDA9c",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
